repeater spacing fix

--- a/uikit/custom/theme/main.less
+++ b/uikit/custom/theme/main.less
@@ -760,7 +760,7 @@ table .InputfieldIsOffset,
     margin-bottom: 1px;
 }
 
-.Inputfields .InputfieldRepeater .InputfieldContent .InputfieldRepeaterItem .InputfieldHeader {
+.Inputfields .InputfieldRepeater .InputfieldContent .InputfieldRepeaterItem .InputfieldRepeaterHeaderInit {
     padding-top: 1em;
     padding-bottom: 1em;
 }
